--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.0.1
 openai==1.3.0
-whisper==1.0.0
+git+https://github.com/openai/whisper.git
 pytube==15.0.0
 moviepy==1.0.3
 requests==2.31.0
